--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+
 *.py[cod]
 *$py.class
 
@@ -7,6 +8,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.pytest_cache
 .Python
 build/
 develop-eggs/
